correction des erreur HTML et modification CSS pour la version mobile

--- a/style.css
+++ b/style.css
@@ -58,6 +58,15 @@ header,section, #filtres, #bloc_recherche
 	margin-right: 3em;
 }
 
+section h2, footer h2
+{
+	font-size: 1.2em;
+}
+
+section h3
+{
+	font-size: 1em;
+}
 .fa-star
 {
 	font-size: 0.7em;
@@ -211,7 +220,7 @@ header nav a
 
 /*filtres*/
 
-#filtres h1
+#filtres h2
 {
 	font-size: 1em;
 	margin-right: 1em;
@@ -332,7 +341,7 @@ section
 	border-radius: 15px;
 }
 
-#article_hebergements h1
+#article_hebergements h2
 {
 	margin: 2em 0 0 1.7em;
 }
@@ -362,7 +371,19 @@ section
 	transform: scale(1.1);
 }
 
-#liste_hebergements h1
+.bloc_hebergements .bloc_images
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+	margin: 5px;
+	width: 236px;
+	height: 110px;
+	border-radius: 10px 10px 0px 0px;
+}
+
+#liste_hebergements h3
 {
 	margin: 3px 1px 0 0.7em;
 }
@@ -377,17 +398,7 @@ section
 	margin: 5px 1px 0 0.7em;
 }
 
-#article_hebergements .bloc_images
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	overflow: hidden;
-	margin: 2.5%;
-	width: 95%;
-	height: 55%;
-	border-radius: 10px 10px 0px 0px;
-}
+
 
 .bloc_hebergements img
 {
@@ -424,7 +435,7 @@ section
 	align-items: center;
 }
 
-#titre_populaires h1
+#titre_populaires h2
 {
 	margin: 2em 0 0 2em;
 }
@@ -452,8 +463,7 @@ section
 	background-color: white;
 	width: 85%;
 	height: 143px;
-	margin: 1.2em;
-	padding: auto;
+	margin: 1em;
 	border-radius: 15px;
 	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
 	transition: transform .2s;
@@ -464,7 +474,7 @@ section
 	transform: scale(1.1);
 }
 
-#aside_hebergements .bloc_images
+.bloc_populaires .bloc_images
 {
 	display: flex;
 	justify-content: center;
@@ -472,8 +482,8 @@ section
 	overflow: hidden;
 	margin-top: 6px;
 	margin-left: 6px;
-	width: 36%;
-	height: 92%;
+	width: 120px;
+	height: 131px;
 	border-radius: 10px 0px 0px 10px;
 }
 
@@ -497,7 +507,7 @@ section
 	width: 170px;
 }
 
-#aside_hebergements .bloc_texte h1
+#aside_hebergements .bloc_texte h3
 {
 	margin-bottom: 0;
 }
@@ -571,7 +581,7 @@ section
 	border: 1px solid black;
 }
 
-.bloc_activites h1
+.bloc_activites h3
 {
 	margin-left: 0.7em;
 }
@@ -591,7 +601,7 @@ footer
 	margin: 1em 0em 0em 3em;
 }
 
-.liste_footer h1
+.liste_footer h2
 {
 	font-size: 1.4em;
 }
@@ -760,18 +770,22 @@ footer
 		margin: 1em;
 	}
 
-	#aside_hebergements .bloc_images
+	.bloc_populaires .bloc_images
 	{
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		overflow: hidden;
-		margin: 2.5%;
-		width: 95%;
-		height: 50%;
+		margin: 5px;
+		width: 236px;
+		height: 100px;
 		border-radius: 10px 10px 0px 0px;
 	}
 
+	.bloc_populaires .bloc_texte h3
+	{
+		margin-top: 0.5em;
+	}
 	.bloc_populaires img
 	{
 		width: 100%;
@@ -785,7 +799,7 @@ footer
 		width: 90%;
 	}
 
-	#liste_populaires h1
+	#liste_populaires h2
 	{
 		margin: 1px 1px 0 0.1em;
 	}
@@ -843,12 +857,12 @@ footer
 		justify-content: center;
 		align-items: center;
 		overflow: hidden;
-		width: 100%;
-		height: 60%;
+		width: 246px;
+		height: 140px;
 		border-radius: 10px 10px 0px 0px;
 	}
 
-	.bloc_activites h1
+	.bloc_activites h3
 	{
 		margin-top: 0;
 		margin-right: 1em;
@@ -881,7 +895,7 @@ footer
 	#article_hebergements
 	{
 		order: 2;
-		width: 100%;
+		width: 650px;
 		margin-top: 2em;
 	}
 
@@ -889,8 +903,13 @@ footer
 	{
 		order: 1;
 		margin: 0px;
-		width: 100%;
+		width: 650px;
 		padding-bottom: 2em;
+	}
+
+	.bloc_populaires .bloc_images
+	{
+		width: 200px;
 	}
 
 	#liste_populaires img
@@ -909,7 +928,7 @@ footer
 
 	#activites
 	{
-		max-width: 768px;
+		width: 650px;
 	}
 	#liste_activites
 	{
@@ -1169,12 +1188,13 @@ footer
 	{
 		flex-direction: column;
 		justify-content: flex-start;
+		padding-bottom: 2em;
 	}
 }
 
 @media all and (max-width: 555px)
 {
-	body
+	html
 	{
 		min-width: 375px;
 	}
@@ -1196,20 +1216,54 @@ footer
 	{
 		flex-direction: column;
 		position: relative;
-	}	
+	}
+
+	#logo
+	{
+		margin-left: 1em;
+	}
 
 	nav li:nth-child(3)
 	{
 		position: absolute;
-		right: 0px;
-		top: 0px;
+		right: 0em;
+		top: 1.5em;
+	}
+
+	nav li:nth-child(3) a
+	{
+		font-weight: bold;
+		color: #0065FC;
 	}
 
 	nav ul
 	{
 		padding: 0;
 		justify-content: space-around;
+	}
 
+	nav li
+	{
+		width: 50%;
+		margin: 0;
+		text-align: center;
+		padding: 1.3em 0 1em 0;
+	}
+
+	.site_actuel
+	{
+		margin: 0;
+		border-top: none;
+		border-bottom: 0.2em solid #0065FC;
+	}
+
+	nav li:nth-child(2)
+	{
+		border-bottom: 0.2em solid #F2F2F2;;
+	}
+	nav li:nth-child(3)
+	{
+		width: 100px;
 	}
 /* ------------------------ rercherche / filtres ------------------------ */
 	#recherche
@@ -1275,6 +1329,19 @@ footer
 		align-items: center;
 	}
 
+	.bloc_hebergements
+	{
+		width: 345px;
+		height: 15em;
+	}
+
+	.bloc_hebergements .bloc_images
+	{
+		width: 335px;
+		height: 140px;
+		margin: 5px;
+	}
+
 	/* --------aside_hebergements --------*/
 	#aside_hebergements
 	{
@@ -1285,11 +1352,12 @@ footer
 		width: 100%;
 	}
 
-	.bloc_hebergements
+	.bloc_populaires
 	{
-		width: 85%;
-		height: 15em;
+		width: 345px;
 	}
+
+
 
 	/* ---- article (activités) ---- */
 
@@ -1318,7 +1386,7 @@ footer
 		display: flex;
 		flex-direction: column;
 		background-color: white;
-		width: 85%;
+		width: 345px;
 		height: 15em;
 		margin-bottom: 2.5em;
 	}
@@ -1333,10 +1401,11 @@ footer
 		border-radius: 10px 10px 0px 0px;
 	}
 
-	.bloc_activites h1
+	.bloc_activites h3
 	{
 		margin-top: 0;
 		margin-right: 1em;
+		margin-bottom: 1.5em;
 	}
 
 	/*-------- footer --------*/
@@ -1344,5 +1413,6 @@ footer
 	{
 		flex-direction: column;
 		justify-content: flex-start;
+		padding-bottom: 2em;
 	}
 }
